--- a/Raster Data Access.ipynb
+++ b/Raster Data Access.ipynb
@@ -15,7 +15,10 @@
     "* Search public [SpatioTemporal Asset Catalog (STAC)](https://github.com/radiantearth/stac-api-spec/tree/release/v1.0.0) repositories of satellite imagery using Python.\n",
     "* Inspect search result’s metadata.\n",
     "* Download (a subset of) the assets available for a satellite scene.\n",
-    "* Open satellite imagery as raster data and save it to disk."
+    "* Open satellite imagery as raster data and save it to disk.\n",
+    "\n",
+    "\n",
+    "Before executing the code cells, be sure to replace the \"_____\" as appropriate"
    ]
   },
   {
