--- a/Boundary Raster Classification.ipynb
+++ b/Boundary Raster Classification.ipynb
@@ -16,7 +16,7 @@
     "## Temporal assessment using command line arguments \n",
     "Setup: https://carpentries-incubator.github.io/geospatial-python/index.html\n",
     "\n",
-    "Based on Instruction: https://carpentries-incubator.github.io/geospatial-python/09-raster-calculations.html\n",
+    "Based on instruction: https://carpentries-incubator.github.io/geospatial-python/09-raster-calculations.html\n",
     "\n",
     "Boundary data source - https://burnseverity.cr.usgs.gov/ravg/data-access, searched for \"cameron peak\"\n",
     "\n",
@@ -26,12 +26,12 @@
     "- Translates the satellite data into a value representing vegetative growth\n",
     "- Classifies and generates statisitics of the vegetative growth, saves output as both text and geotiff \n",
     "\n",
-    "We'll want to compare different years to see pre, post, and potentially other years of vegetive growth within the burn area\n",
-    "To do this, we'll leverage a library called papermill (https://github.com/nteract/papermill) allowing us to pass parameters to the notebook which will dynamically load, analyze, and save our results for a specific year of satellite data.\n",
+    "We'll want to compare different years to see pre, post, and potentially other years of vegetative growth within the burn area.\n",
+    "To do this, we'll leverage a library called *papermill*(https://github.com/nteract/papermill) allowing us to pass parameters to the notebook which will dynamically load, analyze, and save our results for a specific year of satellite data.\n",
     "\n",
-    "When we deploy this script to an HPC environment, running mulitple instances of it will allow us to much more rapidly get our results.\n",
+    "When we deploy this script to a HPC environment, running mulitple instances of it will allow us to much more rapidly get our results.\n",
     "\n",
-    "Here's one call of this script:\n",
+    "Here's one call of this script for the year 2021:\n",
     "\n",
     "```\n",
     "papermill Boundary\\ Raster\\ Classification.ipynb output_2021.ipynb -p year 2021\n",
